RESOLVED FIXED161979
Fix the warnings for extern-template in JSObject template classes
https://bugs.webkit.org/show_bug.cgi?id=161979
Summary Fix the warnings for extern-template in JSObject template classes
Keith Miller
Reported 2016-09-14 11:34:04 PDT
Fix the warnings for extern-template in JSObject template classes
Attachments
Patch (16.09 KB, patch)
2016-09-14 11:34 PDT, Keith Miller
no flags
Keith Miller
Comment 1 2016-09-14 11:34:22 PDT
Radar WebKit Bug Importer
Comment 2 2025-08-21 18:47:26 PDT
Fady Farag
Comment 3 2025-08-21 19:40:52 PDT
EWS
Comment 4 2025-08-25 18:36:49 PDT
Committed 299144@main (93d1c5aab080): <https://commits.webkit.org/299144@main> Reviewed commits have been landed. Closing PR #49746 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.