Fix the warnings for extern-template in JSObject template classes https://bugs.webkit.org/show_bug.cgi?id=161979 rdar://problem/158907443

Reviewed by Keith Miller.

* Source/JavaScriptCore/API/JSAPIWrapperObject.mm:
* Source/JavaScriptCore/API/JSCallbackObject.cpp:
(JSC::JSCallbackObject<JSGlobalObject>::visitChildren):
(JSC::JSCallbackObject<JSNonFinalObject>::visitChildren):
(JSC::JSCallbackObject<JSAPIWrapperObject>::visitChildren):
* Source/JavaScriptCore/API/JSCallbackObject.h:
* Source/JavaScriptCore/API/JSCallbackObjectFunctions.h:
(JSC::JSCallbackObject<Parent>::finishCreation):

Canonical link: https://commits.webkit.org/299144@main