Source/JavaScriptCore/API/JSCallbackObject.h
@@ -27,6 +27,9 @@
 #ifndef JSCallbackObject_h
 #define JSCallbackObject_h
 
+#if JSC_OBJC_API_ENABLED
+#include "JSAPIWrapperObject.h"
+#endif
 #include "JSObjectRef.h"
 #include "JSValueRef.h"
 #include "JSObject.h"
@@ -160,10 +163,7 @@ public:
     void setPrivate(void* data);
     void* getPrivate();
 
-    // FIXME: We should fix the warnings for extern-template in JSObject template classes: https://bugs.webkit.org/show_bug.cgi?id=161979
-    IGNORE_CLANG_WARNINGS_BEGIN("undefined-var-template")
     DECLARE_INFO;
-    IGNORE_CLANG_WARNINGS_END
 
     JSClassRef classRef() const { return m_callbackObjectData->jsClass; }
     bool inherits(JSClassRef) const;
@@ -248,6 +248,15 @@ void JSCallbackObject<Parent>::visitChildrenImpl(JSCell* cell, Visitor& visitor)
     Parent::visitChildren(thisObject, visitor);
     thisObject->m_callbackObjectData->visitChildren(visitor);
 }
+
+// JSCallbackObject<T>::info()'s forward definition triggers an undefined template var warning
+// without these declarations in the same translation unit.
+template<> const ClassInfo JSCallbackObject<JSGlobalObject>::s_info;
+template<> const ClassInfo JSCallbackObject<JSNonFinalObject>::s_info;
+
+#if JSC_OBJC_API_ENABLED
+template<> const ClassInfo JSCallbackObject<JSAPIWrapperObject>::s_info;
+#endif
 
 } // namespace JSC
 
